test/inputs/toplevel/good/for-array-index.miros
for @index <- @{@element:$1,@2,3}
