test/inputs/toplevel/bad/for-unindented-array.miros
for element <- @⟨
one,
two,
three
⟩
